# evcn

./: LICENSE  README.md  pyproject.toml
examples/aib9/: empirical.py  empirical.sh  plot.py  preprocess.py  train.py  train.sh  validate.py  validate.sh
examples/trpcage/: README.md  empirical.sh  plot.py  preprocess.py  train.sh  validate.sh
examples/villin/: empirical.sh  plot.py  preprocess.py  validate.py  validate.sh
src/evcn/: __init__.py  metrics.py  utils.py  vcn.py
