[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evcn"
dynamic = ["version"]
description = "Exact Variational Committor Networks (EVCN)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Chatipat Lorpaiboon", email = "chatipat@uchicago.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch",
]

[project.urls]
Documentation = "https://github.com/dinner-group/evcn#readme"
Issues = "https://github.com/dinner-group/evcn/issues"
Source = "https://github.com/dinner-group/evcn"

[tool.hatch.version]
path = "src/evcn/__about__.py"
